bug fixed - shrinking projects section causing references section to overlap

--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -20,6 +20,10 @@
     }
   }
 
+  @include respond(medium) {
+    border-radius: 0 0 80px 80px;
+  }
+
   p {
     font-size: 28px;
   }
