--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -4,6 +4,10 @@
 .headline {
   display: flex;
   justify-content: center;
+
+  @include respond(small) {
+    text-align: center;
+  }
 }
 
 .projects {
@@ -11,14 +15,29 @@
   flex-direction: column;
   gap: 80px;
 
+  @include respond(medium) {
+    min-height: 950px;
+  }
+
+  @include respond(small) {
+    min-height: 850px;
+  }
+
+  @include respond(xsmall) {
+    min-height: 980px;
+  }
+
   .projects-container {
-    max-height: 645px;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     .project-header {
       height: 66px;
+    }
+
+    @include respond(medium) {
+      height: 42px;
     }
 
     .project-title {
@@ -30,14 +49,14 @@
       border-radius: 32px 32px 0 0;
       cursor: pointer;
 
-      @include respond(large) {
-        padding: 16px 16px 2px 16px;
-        border-radius: 32px 32px 0 0;
-      }
+      // @include respond(large) {
+      //   padding: 16px 16px 2px 16px;
+      //   border-radius: 32px 32px 0 0;
+      // }
 
       @include respond(medium) {
-        font-size: 24px;
-        padding: 16px 16px 5px 16px;
+        font-size: 20px;
+        padding: 32px 32px 7px 32px;
       }
 
       @include respond(small) {
